[gd_scene load_steps=10 format=3 uid="uid://bhisngn2ph3h"]

[ext_resource type="Script" path="res://Scenes/code_violet_boss.gd" id="1_fyv3e"]
[ext_resource type="Texture2D" uid="uid://y5js7g6m5buq" path="res://Images/Characters/code_violet.png" id="1_qv8r1"]
[ext_resource type="PackedScene" uid="uid://bw4lnil0db42v" path="res://Scenes/status_effects_bar.tscn" id="2_sue7m"]
[ext_resource type="Shader" path="res://Shaders/flash.gdshader" id="2_ymv10"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qnt8v"]
shader = ExtResource("2_ymv10")
shader_parameter/flash_color = Vector4(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qlyq0"]
size = Vector2(70, 38)

[sub_resource type="Animation" id="Animation_uug0m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pmb31"]
resource_name = "default"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i2wjj"]
_data = {
"RESET": SubResource("Animation_uug0m"),
"default": SubResource("Animation_pmb31")
}

[node name="CodeVioletBoss" type="Area2D"]
rotation = 3.14159
collision_layer = 2
collision_mask = 4
script = ExtResource("1_fyv3e")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qnt8v")
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_qv8r1")
hframes = 2

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_qlyq0")

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i2wjj")
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="PassiveTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="AfterImageTimer" type="Timer" parent="."]
wait_time = 0.02

[node name="hp" type="Label" parent="."]
offset_left = 19.0
offset_top = -39.0
offset_right = 59.0
offset_bottom = -23.0
rotation = 3.14159
text = "hp
"
horizontal_alignment = 1

[node name="StatusEffectsBar" parent="." instance=ExtResource("2_sue7m")]
offset_left = 15.0
offset_top = -56.0
offset_right = 45.0
offset_bottom = -26.0
rotation = 3.14159

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="PassiveTimer" to="." method="_on_passive_timer_timeout"]
[connection signal="timeout" from="AfterImageTimer" to="." method="_on_after_image_timer_timeout"]
